crates/polychem/src/moieties/snapshots/polychem__moieties__polymer_database__tests__parse_bond_with_chemically_invalid_lost.snap
---
source: crates/polychem/src/moieties/polymer_database.rs
description: bonds
expression: out
---
  × failed to validate polymer database file
  ├─▶   × polymer database file contained an invalid chemical composition
  │   
  ├─▶   × expected a chemical formula (optionally followed by a '+' or '-' and
  │     │ a particle offset), or a standalone particle offset
  │      ╭────
  │    1 │ 2H2O
  │      · ▲▲
  │      · │╰── expected lowercase
  │      · ╰── expected uppercase or '['
  │      ╰────
  │   
  ╰─▶   × attempted 2 parse branches unsuccessfully
      
      Error:
        × expected an element (like Au) or an isotope (like [15N]) optionally
        │ followed by a number
        ╰─▶   × attempted 2 parse branches unsuccessfully
      
            Error:
              × expected an element symbol
              ╰─▶   × expected an uppercase ASCII letter
      
      
            Error:
              × expected '[' to open isotope brackets
      
      
      Error:
        × expected a particle (like p or e), optionally preceded by a number
        ├─▶   × expected a particle symbol
        │
        ╰─▶   × expected a lowercase ASCII letter
      
      
   ╭─[test:4:10]
 3 │     to "Hydroxyl" at="Nonreducing End"
 4 │     lost "2H2O"
   ·          ───┬──
   ·             ╰── invalid chemical composition
 5 │ }
   ╰────
