crates/polychem/src/moieties/snapshots/polychem__moieties__polymer_database__tests__parse_residues_with_no_composition.snap
---
source: crates/polychem/src/moieties/polymer_database.rs
description: residues
expression: out
---
  × error parsing KDL

Error: 
  × child node `composition` is required
   ╭─[test:4:1]
 3 │     }
 4 │ ╭─▶ AminoAcid "K" "Lysine" {
 5 │ │       // composition "C6H14N2O2"
 6 │ ├─▶ }
   · ╰──── node starts here
   ╰────
