crates/polychem/src/moieties/snapshots/polychem__moieties__polymer_database__tests__parse_residues_with_null_composition.snap
---
source: crates/polychem/src/moieties/polymer_database.rs
expression: residues.unwrap()
---
{
  "K": ResidueDescription(
    name: "Lysine",
    composition: ChemicalComposition(
      chemical_formula: [],
      particle_offset: None,
    ),
    functional_groups: [],
  ),
}
