crates/polychem/src/moieties/snapshots/polychem__moieties__polymer_database__tests__parse_residues_without_type_section.snap
---
source: crates/polychem/src/moieties/polymer_database.rs
description: residues
expression: out
---
  × error parsing KDL

Error: 
  × child node `types` is required
