crates/polychem/src/moieties/snapshots/polychem__moieties__polymer_database__tests__parse_residues_without_types.snap
---
source: crates/polychem/src/moieties/polymer_database.rs
description: residues
expression: out
---
  × failed to validate polymer database file
  ╰─▶   × the residue type "AminoAcid" is undefined
        help: double-check for typos, or add "AminoAcid" to the types section
      
   ╭─[test:4:1]
 3 │     }
 4 │ ╭─▶ AminoAcid "G" "Glycine" {
 5 │ │       composition "C2H5NO2"
 6 │ ├─▶ }
   · ╰──── undefined residue type
   ╰────
